--- a/Twitter/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Twitter/Base.lproj/Main.storyboard
@@ -49,22 +49,58 @@
             </objects>
             <point key="canvasLocation" x="-28" y="133.5832083958021"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Home-->
         <scene sceneID="hLr-lq-OS4">
             <objects>
-                <tableViewController id="Pde-Dg-kUE" sceneMemberID="viewController">
+                <tableViewController id="Pde-Dg-kUE" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="yff-yd-gId">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dVr-Ha-tA2">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="105" id="dVr-Ha-tA2" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="105"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dVr-Ha-tA2" id="9wW-a1-Hvg">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="104.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KKQ-t3-zNC">
+                                            <rect key="frame" x="0.0" y="0.0" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="N0Q-6y-thi"/>
+                                                <constraint firstAttribute="height" constant="65" id="hS5-xv-Bfw"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Juhi Park" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qXL-7g-RmY">
+                                            <rect key="frame" x="73" y="0.0" width="68.5" height="22"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UBE-kb-ZsK">
+                                            <rect key="frame" x="73" y="30" width="286" height="64"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="UBE-kb-ZsK" firstAttribute="top" secondItem="qXL-7g-RmY" secondAttribute="bottom" constant="4" id="N5r-aL-BS7"/>
+                                        <constraint firstItem="KKQ-t3-zNC" firstAttribute="top" secondItem="9wW-a1-Hvg" secondAttribute="top" id="NmS-QG-Uf5"/>
+                                        <constraint firstItem="UBE-kb-ZsK" firstAttribute="leading" secondItem="KKQ-t3-zNC" secondAttribute="trailing" constant="8" id="Qpy-uV-Qmz"/>
+                                        <constraint firstItem="UBE-kb-ZsK" firstAttribute="bottom" secondItem="9wW-a1-Hvg" secondAttribute="bottomMargin" id="VYn-3o-Dct"/>
+                                        <constraint firstItem="KKQ-t3-zNC" firstAttribute="leading" secondItem="9wW-a1-Hvg" secondAttribute="leading" id="XhL-0p-fMn"/>
+                                        <constraint firstItem="qXL-7g-RmY" firstAttribute="leading" secondItem="KKQ-t3-zNC" secondAttribute="trailing" constant="8" id="Zv3-M0-6yw"/>
+                                        <constraint firstItem="UBE-kb-ZsK" firstAttribute="trailing" secondItem="9wW-a1-Hvg" secondAttribute="trailingMargin" id="aOf-wo-D9K"/>
+                                        <constraint firstItem="qXL-7g-RmY" firstAttribute="top" secondItem="9wW-a1-Hvg" secondAttribute="top" id="ja2-wc-PU2"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="KKQ-t3-zNC" id="26k-8c-5oM"/>
+                                    <outlet property="tweetContent" destination="UBE-kb-ZsK" id="FhM-Hw-aLS"/>
+                                    <outlet property="userNameLabel" destination="qXL-7g-RmY" id="bFn-va-GIo"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -72,11 +108,18 @@
                             <outlet property="delegate" destination="Pde-Dg-kUE" id="BWa-bZ-54D"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="maH-Q4-jUa"/>
+                    <navigationItem key="navigationItem" title="Home" id="maH-Q4-jUa">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="yNx-NZ-aUL">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onLogout:" destination="Pde-Dg-kUE" id="ONI-4e-w99"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ay-Dd-fdn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1855" y="134"/>
+            <point key="canvasLocation" x="1853.5999999999999" y="133.5832083958021"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TCZ-2j-K0x">
@@ -85,6 +128,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zjx-I5-UiL">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="Pde-Dg-kUE" kind="relationship" relationship="rootViewController" id="e8M-Xi-K7v"/>
